--- a/client/src/features/Table.module.css
+++ b/client/src/features/Table.module.css
@@ -1,27 +1,21 @@
-.flexBlockCards {
+.flexBlockTable {
     display: flex;
 }
-.boxCardsPack {
-    border: 1px solid lightgray;
-    border-radius: 5px;
-    box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
-    margin-top: 20px;
-
-}
-
-.blockCards {
+.blockTable {
     background-color: white;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     padding: 30px;
     margin: 0 auto;
 }
-
+.boxSearchButton {
+    display: flex;
+    justify-content: space-between;
+}
 .btnHandlerAdd {
     margin: 0 0 0 20px;
 }
-
-.btnHandler, .btnHandlerAdd {
+.btnHandlerAdd {
     justify-content: center;
     width: 180px;
     padding: 10px;
@@ -32,104 +26,6 @@
     cursor: pointer;
     transition: background 9999999s;
 }
-
-.btnHandler {
-    margin-right: 10px;
-}
-
-.btnHandler:hover {
-    background: linear-gradient(135deg, #0eaf0e 100%, #baf792 0%);
-}
-
-.active {
-    justify-content: center;
-    width: 150px;
-    padding: 10px;
-    border-radius: 20px;
-    border: none;
-    background-color: #5eb3ec;
-    color: white;
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-.btnDisabled {
-    justify-content: center;
-    width: 150px;
-    padding: 10px;
-    border-radius: 20px;
-    border: none;
-    background: gray;
-    color: white;
-    cursor: auto;
-    opacity: 0.5;
-    transition: background 9999999s;
-    margin-left: 10px;
-}
-
-.boxSearchButton {
-    display: flex;
-    justify-content: space-between;
-}
-
-.blockNameCards {
-    display: flex;
-    justify-content: space-around;
-    background-color: #5eb3ec;
-    height: 40px;
-    padding-top: 10px;
-}
-
-
-
-.boxButtonAndSlider {
-    margin: 20px;
-}
-
-.textPacksCards {
-    font-size: 18px;
-}
-
-.btnAllMy {
-    display: flex;
-    margin-top: 20px;
-}
-
-.boxSlider {
-    margin-top: 20px;
-}
-
-.errors {
-    color: red;
-}
-
-a .arrow {
-    display: inline-block;
-}
-
-.arrow::before {
-    content: "";
-    display: inline-block;
-    border: 10px solid green;
-    border-right-width: 5px;
-    border-left-width: 5px;
-    border-right-color: transparent;
-    border-left-color: transparent;
-    cursor: pointer;
-}
-
-.boxArrow {
-    margin-left: 5px;
-}
-
-.arrowUp::before {
-    border-top-width: 0;
-}
-
-.arrowDown::before {
-    border-bottom-width: 0;
-}
-
 .modalTitle {
     height: 27px;
     left: 466px;
@@ -142,7 +38,11 @@ a .arrow {
     align-items: flex-end;
     color: #2D2E46;
 }
-
+.modalBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .modalInput {
     margin-top: 35px;
     width: 75%;
@@ -152,7 +52,6 @@ a .arrow {
     border-radius: 10px;
     background: #eee;
 }
-
 .modalInput:focus {
     outline-color: #2196f3;
 }
@@ -177,9 +76,59 @@ a .arrow {
     background-color: white;
     color: #5eb3ec;
 }
+.input {
+    padding: 10px;
+    width: 300px;
+    margin: 26px;
+    font-size: 16px;
+}
+.selectColumn{
+    padding: 10px;
+    font-size: 16px;
+    width: 200px;
+    margin-right: 30px;
+}
+.selectCondition {
+    padding: 10px;
+    font-size: 16px;
+    width: 200px;
+}
 
-.modalBox {
+.boxTable {
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+    margin-top: 20px;
+
+}
+.blockNameTable {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-around;
+    background-color: #5eb3ec;
+    height: 40px;
+    padding-top: 10px;
+}
+.boxArrow {
+    margin-left: 5px;
+}
+a .arrow {
+    display: inline-block;
+}
+
+.arrow::before {
+    content: "";
+    display: inline-block;
+    border: 10px solid green;
+    border-right-width: 5px;
+    border-left-width: 5px;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    cursor: pointer;
+}
+.arrowUp::before {
+    border-top-width: 0;
+}
+
+.arrowDown::before {
+    border-bottom-width: 0;
 }
